<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <!-- >TextView
        android:id="@+id/textView_titulo_modificar_usuario"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:paddingTop="10dp"
        android:gravity="center|left"
        android:text="@string/textView_modificar_usuario"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/blue_button"
         /-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imagen_usuario"
        android:src="@drawable/childs" />

    <EditText
        android:id="@+id/editText_nombre_usuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/edittext_azul"
        android:ems="10"
        android:hint="@string/hint_nombre_usuario"
        android:inputType="textPersonName"
        android:textColor="@color/indigo_500"
        android:textColorHint="@color/indigo_500" />

    <EditText
        android:id="@+id/editText_fechanac_usuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_azul"
        android:ems="10"
        android:hint="@string/hint_fecha_nacimiento"
        android:inputType="date"
        android:onClick="onclickEditFechaNac"
        android:textColor="@color/indigo_500"
        android:textColorHint="@color/indigo_500" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio0"
            style="@style/Theme.Translucent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:button="@drawable/custom_radio_button_selector_azul"
            android:checked="true"
            android:text="@string/add_user_cbmale"
            android:textColor="@color/indigo_500" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/indigo_500" 
            android:text="@string/add_user_cbfemale"
            android:button="@drawable/custom_radio_button_selector_azul" />
    </RadioGroup>

    <Button
        android:id="@+id/button_guardar_modificar_usuario"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_button"
        android:onClick="onclickGuardarModificarUsuario"
        android:text="@string/button_modificar_usuario"
        android:textColor="@color/white"
        android:textSize="11dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_informativo_agregar_modificar_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/indigo_500"
        android:textColorHint="@color/white" />
    
    <LinearLayout
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    </LinearLayout>

</LinearLayout>